# goodtables-pandas-py

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  noxfile.py  pyproject.toml  setup.py
.github/workflows/: coverage.yml  release.yml  tests.yml
goodtables_pandas/: __init__.py  check.py  errors.py  json.py  options.py  parse.py  read.py  validate.py
src/goodtables_pandas/: __init__.py  check.py  errors.py  json.py  options.py  parse.py  read.py  validate.py
tests/: __init__.py  test_parse.py
