[tool.poetry]
name = "goodtables-pandas-py"
version = "0.1.0"
description = "Read and validate Frictionless Data Tabular Data Packages with pandas."
authors = ["Ethan Welty <ethan.welty@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ezwelty/goodtables-pandas-py"
repository = "https://github.com/ezwelty/goodtables-pandas-py"
keywords = ["frictionless", "goodtables", "datapackage", "pandas"]
packages = [{ include = "goodtables_pandas", from = "src" }]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.3"
goodtables = "^2.5.2"
datapackage = "^1.15.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
coverage = {extras = ["toml"], version = "^5.3"}
pytest-cov = "^2.10.1"
flake8 = "^3.8.4"
black = "^20.8b1"
flake8-black = "^0.2.1"
flake8-import-order = "^0.18.1"
flake8-docstrings = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["goodtables_pandas"]

[tool.coverage.report]
show_missing = true
