[tool.poetry]
name = "goodtables-pandas-py"
version = "0.1.2"
description = "Read and validate Frictionless Data Tabular Data Packages with pandas."
authors = ["Ethan Welty <ethan.welty@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ezwelty/goodtables-pandas-py"
repository = "https://github.com/ezwelty/goodtables-pandas-py"
keywords = ["frictionless", "goodtables", "datapackage", "pandas"]
packages = [{ include = "goodtables_pandas", from = "src" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Testing"
]

[tool.poetry.dependencies]
python = "^3.6"
pandas = "^1.1.3"
goodtables = "^2.2.1"
datapackage = "^1.9.2"
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
coverage = {extras = ["toml"], version = "^5.3"}
pytest-cov = "^2.10.1"
flake8 = "^3.8.4"
black = "^20.8b1"
flake8-black = "^0.2.1"
flake8-import-order = "^0.18.1"
flake8-docstrings = "^1.5.0"
xdoctest = "^0.15.0"
flake8-annotations = "^2.4.1"
codecov = "^2.1.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["goodtables_pandas"]

[tool.coverage.report]
show_missing = true
